[package]
name = "trafdat-rs"
version = "0.2.0"
authors = ["Douglas Lau <doug.lau@state.mn.us>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
env_logger = "0.6"
log = "0.4"
zip = "0.5"
serde-xml-rs = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
regex = "1"
unicode-segmentation = "1.6.0"
libxml = "0.2"
